[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/GDEditor/Views/GDStandardView.gd" type="Script" id=2]
[ext_resource path="res://addons/GDEditor/Views/CharacterRect.gd" type="Script" id=3]

[node name="StandardView" type="Panel"]
margin_right = 1024.0
margin_bottom = 270.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 10
__meta__ = {
"_edit_lock_": true
}

[node name="CharacterLeft" type="MarginContainer" parent="HBoxContainer"]
margin_right = 334.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="CharacterLeftRect" type="TextureRect" parent="HBoxContainer/CharacterLeft"]
margin_right = 334.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
flip_h = true

[node name="TextBoxContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 344.0
margin_right = 679.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TextBoxContainer"]
margin_top = 10.0
margin_right = 335.0
margin_bottom = 260.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 2

[node name="ChoiceContainer" type="VBoxContainer" parent="HBoxContainer/TextBoxContainer/VBoxContainer"]
visible = false
margin_left = 92.0
margin_top = 130.0
margin_right = 242.0
margin_bottom = 130.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 5
size_flags_horizontal = 4
custom_constants/separation = 10
alignment = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextBox" type="Label" parent="HBoxContainer/TextBoxContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 335.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 8
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterRight" type="MarginContainer" parent="HBoxContainer"]
margin_left = 689.0
margin_right = 1024.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 3 )

[node name="CharacterRightRect" type="TextureRect" parent="HBoxContainer/CharacterRight"]
margin_right = 335.0
margin_bottom = 270.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
